--- a/conf/app.ini
+++ b/conf/app.ini
@@ -5,8 +5,8 @@ application.bootstrap=ROOT_PATH "/" APP_NAME "/" Bootstrap.php
 application.dispatcher.defaultModule="index"
 application.dispatcher.defaultController="index"
 application.dispatcher.defaultAction="index"
-application.dispatcher.throwException=1
-application.modules="Index,Log"
+application.dispatcher.throwException=1 
+application.modules="Index,Log,Demo"
 application.view.ext="phtml"
 
 [product:common]
